# turtlebot4_chatgpt_control

./: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
launch/: control_launch.py
turtlebot4_chatgpt_control/: chatgpt_to_command.py  main_terminal_control.py  turtlebot_controller.py
