<?xml version="1.0"?>
<package format="3">
  <name>turtlebot4_chatgpt_control</name>
  <version>0.0.1</version>
  <description>Use ChatGPT to control TurtleBot4 with natural language</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>MIT</license>
  <buildtool_depend>setuptools</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>openai</exec_depend>
</package>
